--- a/javascript/introduction-to-js-1/what-is-js/apply-javascript.html
+++ b/javascript/introduction-to-js-1/what-is-js/apply-javascript.html
@@ -5,5 +5,19 @@
 </head>
 <body>
   <button>Click me</button>
-</body>
+</body><script>
+ 
+            // Java Script goes here
+function createParagraph() {
+ var para =  document.createElement('p')
+ para.textContent = 'You clicked the button!';
+ document.body appendChild(para);
+  }
+  
+  var buttons = document.querySelectorAll('button');
+  
+  for (var i = 0; <buttons.length ; i++) {
+    buttons[i].addEventListener('click', createParagraph);
+  }
+  </script>
 </html>
